@@ -1,7 +1,10 @@
 2008-08-08  Alper KANAT  <alperkanat@gmail.com>
 
-	* Reverting all changes for multilingual raptiye.. Instead I'm going to use
-	Django's i18n abilities..
+	* links/: New application for sidebar links is added.
+	* frontpage/models.py: Corrected the level ordering in the admin panel..
+	* templates/blog/detail.html: Fixed a little bug..
+	* templates/blog/sidebar.html: Admin url resolving not working for now in
+	Django.. Entered a bug report about it and still waiting..
 	* media/images/rss_title_en.png, media/images/content_title_en.png, 
 	media/images/subtitle_en.png, blog/en-urls.py,
 	templates/blog/contact_en.html, templates/blog/tags_en.html,
@@ -14,6 +17,8 @@
 	* blog/views.py, blog/templatetags/blog_filters.py, extra/search.py,
 	extra/search.py, comments/views.py, frontpage/views.py: Modified and fixed
 	some parts..
+	* Reverting all changes for multilingual raptiye.. Instead I'm going to use
+	Django's i18n abilities..
 	
 2008-08-02  Alper KANAT  <alperkanat@gmail.com>
 
